<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/home"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@mipmap/search"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_newpost"
        android:icon="@mipmap/newpost"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/title_newPost" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/notification"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@mipmap/setting"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/title_setting" />

</menu>
