<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.huriyo.Ui.PrivacyAndTermsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="35dp"
                    android:src="@mipmap/ic_left_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="@android:color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/leave_msg"
            android:textColor="@color/gray_basic"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edTItle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/gray_border_drawable"
            android:gravity="start"
            android:hint="@string/type_title_here"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/edMsg"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray_basic"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/edMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/gray_border_drawable"
            android:gravity="start"
            android:hint="@string/type_msg_here"
            android:imeOptions="actionDone"
            android:lines="4"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray_basic"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_green_button_drawable"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textSize="17sp" />

    </LinearLayout>


</LinearLayout>
