<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg_main"
    android:orientation="vertical"
    tools:context="com.huriyo.Ui.BussinessInfoActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/select_bussiness_category"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rlImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_cover" />

        <com.huriyo.Utility.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:src="@mipmap/avatar"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="4dp" />

        <ImageView
            android:id="@+id/ivEditCover"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_margin="15dp"
            android:background="@drawable/round_trans_black"
            android:padding="8dp"
            android:src="@mipmap/edit" />

    </RelativeLayout>

    <EditText
        android:id="@+id/bussiness_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_square"
        android:hint="@string/bussiness_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:nextFocusDown="@+id/bussiness_desc"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="15sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/bussiness_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_square"
        android:gravity="start"
        android:hint="@string/bussiness_desc"
        android:imeOptions="actionNext"
        android:lines="2"
        android:nextFocusDown="@+id/bussiness_vivers"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/bussiness_vivers"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_square"
        android:hint="@string/write_vivers"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:nextFocusDown="@+id/bussiness_location"
        android:paddingLeft="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="15sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/bussiness_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_square"
        android:gravity="start"
        android:hint="@string/write_location"
        android:imeOptions="actionDone"
        android:lines="2"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/register_bg_drawable"
        android:text="@string/continues"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/resend_btn_bd_drawable"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
