<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg_main"
    android:orientation="vertical"
    tools:context="com.huriyo.Ui.MainActivity">

    <LinearLayout
        android:id="@+id/llBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:src="@mipmap/ic_left_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="155dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/fp_request"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textWebEmailAddress"
            android:lines="1"
            android:nextFocusDown="@+id/edPassword"
            android:paddingLeft="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

    </LinearLayout>

    <Button
        android:id="@+id/btnFp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/llBottom"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/register_bg_drawable"
        android:text="@string/fp2"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>
